<resources>
    <string name="app_name" translatable="false">Costa Rica Surf Guide</string>
    <string name="google_maps_api_key" translatable="false">AIzaSyCBhZgdJKOrw0FtcVvbK_tYrGEZh-rQ-p0</string>
    <string name="title_activity_banner" translatable="false">BannerActivity</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="magicseaweedapikey" translatable="false"><![CDATA[https://magicseaweed.com/api/0r79ZlbW4u513Ya02U4Kr55R7Sf8K5SJ/forecast/?spot_id=987&fields=timestamp,charts.]]></string>
    <string name="app_id" translatable="false">471883629604948</string>
    <string-array name="zone_array">
        <item>North Pacific</item>
        <item>Central Pacific</item>
        <item>South Pacific</item>
        <item>South Caribean</item>
    </string-array>
    <string-array name="distance_metrics_array">
        <item>km</item>
        <item>Miles</item>
    </string-array>
    <string-array name="heigth_metric_array">
        <item>Feet</item>
        <item>Meter</item>
    </string-array>
    <string name="tide">Tide</string>
    <string name="topmain">Top 5 Waves</string>
    <string name="intro">Ready to surf!</string>
    <string name="northpacific">North Pacific</string>
    <string name="centralpacific">Central Pacific</string>
    <string name="southpacific">South Pacific</string>
    <string name="southcaribbean">South Caribbean</string>
    <string name="zoneselection">Zone selection</string>
    <string name="beachselection">Beach selection</string>
    <string name="originselection">Origin selection</string>
    <string name="sanjose" translatable="false">San José</string>
    <string name="mylocation">My Location</string>
    <string name="costarica" translatable="false">Costa Rica</string>
    <string name="notready">Not ready</string>
    <string name="nopoints">No Points</string>
    <string name="chooserighcoordenates">Choose right coordenates</string>
    <string name="cantgetcurrentlocation">Cannot get current location</string>
    <string name="generalinfo">General Info.</string>
    <string name="route">Route</string>
    <string name="gallery">Gallery</string>
    <string name="zones">Zones</string>
    <string name="beaches">Beaches</string>
    <string name="gps" translatable="false">GPS</string>
    <string name="swell" translatable="false">Swell</string>
    <string name="period">Period</string>
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="sst" translatable="false">SST</string>
    <string name="skate" translatable="false">Skate</string>
    <string name="animate">Animate</string>
    <string name="edit_message">Enter a message</string>
    <string name="title_activity_map">Online Map</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_pop_up" translatable="false">Pop Up</string>
    <string name="title_activity_main" translatable="false">General Info</string>
    <string name="title_activity_selector">Surf Zones</string>
    <string name="title_activity_image_gallery">Gallery</string>
    <string name="title_activity_fullscreen">Fullscreen activity</string>
    <string name="title_activity_list_pacific_central">Central Pacific</string>
    <string name="title_activity_list_pacific_north">North Pacific</string>
    <string name="title_activity_list_caribbean">South Caribbean</string>
    <string name="title_activity_list_pacific_south">South Pacific</string>
    <string name="str_rb_driving">Drive</string>
    <string name="str_rb_bicycling">Bicycle</string>
    <string name="str_rb_walking">Walk</string>
    <string name="str_rb_normal" translatable="false">Normal</string>
    <string name="str_rb_alternative">Alternative</string>
    <string name="mode">Mode</string>
    <string name="empty" translatable="false"> </string>
    <string name="beach">Beach</string>
    <string name="best_swell_dirrection">Best swell direction</string>
    <string name="best_tide_position">Best tide position</string>
    <string name="dangers">Dangers</string>
    <string name="location">Location</string>
    <string name="description">Wave description</string>
    <string name="info" translatable="false">Info</string>
    <string name="online">Forecast</string>
    <string name="alert">Alert</string>
    <string name="orientation">Orientation</string>
    <string name="googleplayservicesavailable">Google Play Services are available</string>
    <string name="googleplayservicesarenotavailable">Google Play Services are not available</string>
    <string name="googleplayservicesmustinstall">Google Play services must be installed</string>
    <string name="title_activity_swell" translatable="false">Swell</string>
    <string name="smb1">ft. 0</string>
    <string name="smb2" translatable="false">3</string>
    <string name="smb3" translatable="false">6</string>
    <string name="smb4" translatable="false">8</string>
    <string name="smb5" translatable="false">10</string>
    <string name="smb6" translatable="false">14</string>
    <string name="smb7" translatable="false">18</string>
    <string name="smb8" translatable="false">25</string>
    <string name="smb9" translatable="false">40</string>
    <string name="smb10" translatable="false">75</string>
    <string name="mainsealevel">Pressure</string>
    <string name="next">Next</string>
    <string name="hiddenspot">This is a secret point!</string>
    <string name="gradient">Gradient</string>
    <string name="settings">Settings</string>
    <string name="maps">Maps</string>
    <string name="signon">Sign-on</string>
    <string name="alreadyrunning">Already running</string>
    <string name="distance">Distance</string>
    <string name="tideplace" translatable="false">Punta Arenas, Costa Rica</string>
    <string name="olliespointn" translatable="false">Ollie´s Point</string>
    <string name="laberintosn" translatable="false">Laberintos</string>
    <string name="lasvaritasn" translatable="false">Las Varitas</string>
    <string name="rocabrujan" translatable="false">Roca Bruja</string>
    <string name="elbajon" translatable="false">El Bajo</string>
    <string name="playaiguanita" translatable="false">Iguanita</string>
    <string name="carbonaln" translatable="false">Carbonal</string>
    <string name="playahermosa" translatable="false">Hermosa</string>
    <string name="playasdelcocon" translatable="false">Playas del Coco</string>
    <string name="flamingopoint" translatable="false">Flamingo´s Point</string>
    <string name="playabrasilito" translatable="false">Brasilito</string>
    <string name="bahiadelospiratasn" translatable="false">Bahía de Piratas</string>
    <string name="playagranden" translatable="false">Grande</string>
    <string name="playaavellanas" translatable="false">Avellanas</string>
    <string name="playanegran" translatable="false">Negra</string>
    <string name="junquillaln" translatable="false">Junquillal</string>
    <string name="playamarbella" translatable="false">Marbella</string>
    <string name="callejonesn" translatable="false">Callejones</string>
    <string name="ostinal" translatable="false">Ostional</string>
    <string name="camaronaln" translatable="false">Camaronal</string>
    <string name="playacarrillon" translatable="false">Carrillo</string>
    <string name="puntaislitan" translatable="false">Punta Islita</string>
    <string name="playabejucon" translatable="false">Bejuco</string>
    <string name="playasanmigueln" translatable="false">San Miguel</string>
    <string name="playamanzanillo" translatable="false">Manzanillo</string>
    <string name="santateresamalpaisn" translatable="false">Santa Teresa</string>
    <string name="barrigonan" translatable="false">Barrigona</string>
    <string name="lossuecosn" translatable="false">Los Suecos</string>
    <string name="im_generic" translatable="false">im_generic</string>
    <string name="elpuerton" translatable="false">El Puerto</string>
    <string name="bocabarrancan" translatable="false">Boca Barranca</string>
    <string name="playasdedonaana" translatable="false">Playas de Doña Ana</string>
    <string name="puertocalderan" translatable="false">Puerto Caldera</string>
    <string name="corralillon" translatable="false">Corralillo</string>
    <string name="elhoyon" translatable="false">El Hoyo</string>
    <string name="elsilencion" translatable="false">El Silencio</string>
    <string name="guacalillon" translatable="false">Guacalillo</string>
    <string name="tivivesrivermouthn">Tivives Rivermouth</string>
    <string name="valorpointn" translatable="false">Valor Point</string>
    <string name="playaagujas" translatable="false">Agujas</string>
    <string name="playablancan" translatable="false">Blanca</string>
    <string name="eltragaderon" translatable="false">El Tragadero</string>
    <string name="elculon" translatable="false">El Culo</string>
    <string name="playaescondidan" translatable="false">Escondida</string>
    <string name="littlefijin" translatable="false">Little Fiji</string>
    <string name="laislan" translatable="false">La Isla</string>
    <string name="rocalocan" translatable="false">Roca Loca</string>
    <string name="elgaton" translatable="false">El Gato</string>
    <string name="esterillosn" translatable="false">Esterillos</string>
    <string name="bocaqueposn" translatable="false">Boca Quepos</string>
    <string name="bocadamasn" translatable="false">Boca Damas</string>
    <string name="manuelantonio" translatable="false">Manuel Antonio</string>
    <string name="cutters" translatable="false">Cutter´s</string>
    <string name="playitasn" translatable="false">Playitas</string>
    <string name="playitasnude">Playitas (Nude)</string>
    <string name="playaelreyn" translatable="false">El Rey</string>
    <string name="dominical" translatable="false">Dominical</string>
    <string name="dominicalito" translatable="false">Dominicalito</string>
    <string name="lapuntan" translatable="false">La Punta</string>
    <string name="bancoquebrado" translatable="false">Barco Quebrado</string>
    <string name="title_activity_custom" translatable="false">Custom Activity</string>
    <string name="alajuelaairport">Alajuela Airport</string>
    <string name="liberiaairport">Liberia Airport</string>
    <string name="iguanitan" translatable="false">Iguanita</string>
    <string name="hermosadelcocon" translatable="false">Hermosa del Coco</string>
    <string name="flamingon" translatable="false">Flamingo</string>
    <string name="brasiliton" translatable="false">Brasilito</string>
    <string name="playatamarindon" translatable="false">Tamarindo</string>
    <string name="playalangostan" translatable="false">Langosta</string>
    <string name="playaavellanasn" translatable="false">Avellanas</string>
    <string name="golfon" translatable="false">Golfo</string>
    <string name="playajunquillaln" translatable="false">Junquillal</string>
    <string name="marbellan" translatable="false">Marbella</string>
    <string name="playaostionaln" translatable="false">Ostinal</string>
    <string name="playaguionesn" translatable="false">Guiones</string>
    <string name="unit">Unit</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="feet" translatable="false">"ft"</string>
    <string name="mt" translatable="false">mt</string>
    <string name="threeday">3 Day</string>
    <string name="routes">Routes:</string>
    <string name="tours">Tours:</string>
    <string name="savetosd">Save to SD-Card</string>
    <string name="animatexy">Animate XY</string>
    <string name="choosedate">Choose date</string>
</resources>