<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
             xmlns:ads="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/vwMap">

    <fragment
        android:id="@+id/map"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/animate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:textColor="@color/white"
                android:textOff="@string/animate"
                android:textOn="@string/animate"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnRoute"
                style="@style/ButtonStyleX"
                android:text="@string/route" />

            <Button
                android:id="@+id/btnZones"
                style="@style/ButtonStyleX"
                android:text="@string/zones" />

            <Button
                android:id="@+id/btnBeaches"
                style="@style/ButtonStyleX"
                android:text="@string/beaches"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnGPS"
                style="@style/ButtonStyleX"
                android:text="@string/gps"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnSwell"
                style="@style/ButtonStyleX"
                android:enabled="true"
                android:onClick="InitSwell"
                android:text="@string/swell" />

            <Button
                android:id="@+id/btnOrientation"
                style="@style/ButtonStyleX"
                android:text="@string/orientation"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llDistance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black_overlay"
            android:visibility="gone">

            <TextView
                android:id="@+id/distance"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/distance"
                android:textSize="@dimen/text_size"
                android:textColor="@color/white" />

            <Spinner
                android:id="@+id/metric_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size"  />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llModes"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/rg_modes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size"
                    android:text="@string/mode" />

                <RadioButton
                    android:id="@+id/rb_driving"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:textSize="@dimen/text_size"
                    android:text="@string/str_rb_driving" />

                <RadioButton
                    android:id="@+id/rb_bicycling"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="@dimen/text_size"
                    android:text="@string/str_rb_bicycling" />

                <RadioButton
                    android:id="@+id/rb_walking"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="@dimen/text_size"
                    android:text="@string/str_rb_walking" />
            </RadioGroup>


            <RadioGroup
                android:id="@+id/rg_routes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size"
                    android:text="@string/route" />

                <RadioButton
                    android:id="@+id/rb_normal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:textSize="@dimen/text_size"
                    android:text="@string/str_rb_normal" />

                <RadioButton
                    android:id="@+id/rb_alternative"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="@dimen/text_size"
                    android:text="@string/str_rb_alternative" />
            </RadioGroup>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>